<resources>
    <string name="app_name">EasyPay</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="onBoard_txt_header">Payment Made Easy</string>
    <string name="onBoard_txt_body">Grow your business with EasyPay.
        The smartest and easiest way to pay bills and make payments
        online anywhere in the world
    </string>
    <string name="btnRegister_txt">Register</string>
    <string name="btnLogin_txt">Login</string>
    <string name="onBoardImg">OnBoarding Activity Image</string>
    <string name="splash_screen_txt">Splash Screen Image</string>
    <string name="splash_footer_txt">Pay your bills seamlessly</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_activity_logo_img">EasyPay Logo on Login Activity</string>
    <string name="register_label_txt">REGISTER</string>
    <string name="fullName_txt_hint">Fullname</string>
    <string name="register_btn_txt">Create Account</string>
    <string name="passsword_field_helper_txt">Enter Password</string>
    <string name="fullName_field_helper_txt">Fullname</string>
    <string name="emailfield_helper_txt">Email</string>
    <string name="numberfield_helper_txt">Number</string>
    <string name="confirm_password_helper_txt">Confirm Password</string>
    <string name="splash_screen_app_name">Splash Screen App name</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_contact_title">contact</string>
    <string name="content_description_favorite">favorite item menu</string>
    <string name="favorite">favorite</string>
    <string name="content_descrip_contact">Contact menu item</string>
    <string name="bottom_transaction_label">transaction</string>
    <string name="bottom_help_label">help</string>
    <string name="bottom_appbar_menu_item">Bottom Appbar menu item</string>
    <string name="bottom_home_label">home</string>
    <string name="bottom_user_label">user</string>
    <string name="create_pin_header_txt">Create Pin</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="btn_create_pin_txt">Create</string>
    <string name="continue_btn_txt">continue</string>
    <string name="phone_verify_header_txt">Phone Verification</string>
    <string name="verify_phone_guide">Enter your phone number below a code will be sent to you to verify your number</string>
    <string name="menu_logout_title">Logout</string>
    <string name="have_accountt">Already have an account?</string>
    <string name="create_one">Create one</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="contact_us">Contact Us</string>
    <string name="info_easypay_com">info@easypay.com</string>
    <string name="easypay_phone_number">070XXXFXXXX</string>
    <string name="app_logo_for_nav_header">app logo for nav header</string>
    <string name="buy_airtime_image">Buy airtime image</string>
    <string name="buy_airtime_label">Buy Airtime</string>
    <string name="buy_data_label_txt">Buy Data Subscriptions</string>
    <string name="buy_education_label_txt">Buy Education</string>
    <string name="buy_tv_cable_label_txt">Buy TV Cable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_electric_unit_label">Buy Electricity unit</string>

</resources>