<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/bottom_home_label" />
        <item
            android:id="@+id/nav_transact"
            android:icon="@drawable/ic_money_24"
            android:title="@string/bottom_transaction_label" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24"
            android:title="@string/bottom_help_label" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/bottom_user_label" />
    </group>

    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_call_menu"
                android:title="@string/easypay_phone_number" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_send_menu"
                android:title="@string/info_easypay_com" />
        </menu>
    </item>

</menu>