<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_home_label"
        app:itemIconSize="35dp"/>

    <item
        android:id="@+id/transaction"
        android:enabled="true"
        android:icon="@drawable/ic_money_24"
        android:title="@string/bottom_transaction_label"
        app:itemIconSize="35dp"/>

    <item
        android:id="@+id/help"
        android:enabled="true"
        android:icon="@drawable/ic_help_24"
        android:title="@string/bottom_help_label"
        app:itemIconSize="35dp"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_24"
        android:title="@string/bottom_user_label"
        app:itemIconSize="35dp"

        />
</menu>