<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:gravity="bottom"
    android:id="@+id/nav_header_layout"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/nav_header_image"
        android:layout_width="180dp"
        android:layout_height="180dp"

        android:src="@drawable/easypay_logo"
        android:layout_above="@+id/nav_header_appname"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo_for_nav_header" />

    <TextView
        android:id="@+id/nav_header_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nav_head_username"/>

    <TextView
        android:id="@+id/nav_head_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_easypay_com"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>


</RelativeLayout>